--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,28 +1,61 @@
-name: Deploy App
-on: push
+name: Deployment
+on:
+  push:
+    branches:
+      - main
 jobs:
-  lint-app:
+  lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - run: npm ci
-      - run: npm run lint
-  test-app:
-    needs: lint-app
+      - name: Get code
+        uses: actions/checkout@v3
+      - name: Load cached dependencies
+        uses: ./.github/actions/cached-dependencies
+      - name: Lint code
+        run: npm run lint
+  test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - run: npm ci
-      - run: npm test
-  build-app:
-    needs: test-app
+      - name: Get code
+        uses: actions/checkout@v3
+      - name: Load cached dependencies
+        uses: ./.github/actions/cached-dependencies
+      - name: Test code
+        id: run-tests
+        run: npm run test
+      - name: Upload test report
+        if: failure() && steps.run-tests.outcome == 'failure'
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-report
+          path: test.json
+  build:
+    needs: test
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - run: npm ci
-      - run: npm run build
-  deploy-app:
-    needs: build-app
+      - name: Get code
+        uses: actions/checkout@v3
+      - name: Load cached dependencies
+        uses: ./.github/actions/cached-dependencies
+      - name: Build website
+        run: npm run build
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: dist-files
+          path: dist
+  deploy:
+    needs: build
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Deploying app..."
+      - name: Get code
+        uses: actions/checkout@v3
+      - name: Get build artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: dist-files
+          path: ./dist
+      - name: Output contents
+        run: ls
+      - name: Deploy site
+        run: echo "Deploying..."
