--- a/.github/actions/deploy-s3-javascript/action.yml
+++ b/.github/actions/deploy-s3-javascript/action.yml
@@ -11,6 +11,9 @@ inputs:
   dist-folder:
     description: 'Folder containing deployable files'
     required: true
+outputs:
+  website-url:
+    description: website url
 runs:
   using: 'node16'
   main: 'main.js'
