--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,3 +66,6 @@ jobs:
           bucket: 'cpenna-bucket'
           dist-folder: ./dist
           bucket-region: 'us-east-1'
+      - name: Output information
+        run: |
+          echo "Live URL: ${{ steps.deploy.outputs.website-url }}"
